--- a/src/app/pages/market-place/item-detail/item-detail.component.html
+++ b/src/app/pages/market-place/item-detail/item-detail.component.html
@@ -45,7 +45,7 @@
                             <app-custom-button [isTextStroke]="false" [text]="'buy now'"></app-custom-button>
                         </div>
                         <div class="mt-auto">
-                            <app-custom-button [isTextStroke]="false" [isBackgroundTransparent]="true" [text]="'bid now'"></app-custom-button>
+                            <app-custom-button [isTextStroke]="false" [isBackgroundTransparent]="true" [isTextDark]="true" [text]="'bid now'"></app-custom-button>
                         </div>
                     </div>
 
