--- a/src/app/pages/auth/auth/auth.component.html
+++ b/src/app/pages/auth/auth/auth.component.html
@@ -1,10 +1,20 @@
-<app-progress-bar class="position-fixed w-100" *ngIf="isLoading"></app-progress-bar>
-<div class="row g-0">
-  <div class="col img-wrapper d-none d-md-flex">
-    <img [src]="'assets/img/project/login.png'" alt="Login image">
-  </div>
-  <div class="col d-flex flex-column justify-content-center p-3">
-    <!-- NOTE Content -->
+<app-page-layout [headerTheme]="'light'">
+  <div class="container-fluid m-0 p-0 auth-wrapper text-center">
+    <div class="left-top-img">
+      <img src="assets/img/project/play_to_earn/1.png" />
+    </div>
+    <div class="left-middle-img">
+      <img src="assets/img/project/play_to_earn/2.png" />
+    </div>
+    <div class="left-bottom-img">
+      <img src="assets/img/project/release_business/1.png" />
+    </div>
+    <div class="right-top-img">
+      <img src="assets/img/project/play_to_earn/3.png" />
+    </div>
+    <div class="right-bottom-img">
+      <img src="assets/img/project/release_business/2.png" />
+    </div>
     <router-outlet></router-outlet>
   </div>
-</div>
+</app-page-layout>
