--- a/src/app/pages/auth/auth/auth.component.scss
+++ b/src/app/pages/auth/auth/auth.component.scss
@@ -1,14 +1,63 @@
-// NOTE Layout
-.row {
-  min-height: 100vh;
-  .col.img-wrapper {
-    min-height: 100vh;
-    overflow: hidden;
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
+.auth-wrapper {
+  background-color: white;
+  min-height      : calc(100vh - 168px);
+  height          : calc(100vh - 168px);
+  position        : relative;
+  overflow        : hidden;
+}
+
+.left-top-img {
+  position: absolute;
+  left    : 1rem;
+  top     : 3rem;
+  width   : 10vw;
+
+  img {
+    width: 100%;
+  }
+}
+
+.left-middle-img {
+  position : absolute;
+  left     : 10rem;
+  top      : 55%;
+  transform: translateY(-50%);
+  width    : 10vw;
+
+  img {
+    width: 100%;
+  }
+}
+
+.left-bottom-img {
+  position: absolute;
+  left    : 1rem;
+  bottom  : -5rem;
+  width   : 15vw;
+
+  img {
+    width: 100%;
+  }
+}
+
+.right-top-img {
+  position: absolute;
+  right   : 5rem;
+  top     : 3rem;
+  width   : 8vw;
+
+  img {
+    width: 100%;
+  }
+}
+
+.right-bottom-img {
+  position: absolute;
+  right   : -2rem;
+  bottom  : 0;
+  width   : 15vw;
+
+  img {
+    width: 100%;
   }
 }
