--- a/src/app/shared/components/buttons/app-button/app-button.component.html
+++ b/src/app/shared/components/buttons/app-button/app-button.component.html
@@ -1,3 +1,3 @@
-<div class="app-button" [ngClass]="{'text-stroke' : isTextStroke, 'app-button-background' : !isBackgroundTransparent, 'text-dark' : isBackgroundTransparent}"  (click)="onClick($event)" #appButton>
+<div class="app-button" [ngClass]="{'text-stroke' : isTextStroke, 'app-button-background' : !isBackgroundTransparent, 'text-dark' : isTextDark}"  (click)="onClick($event)" #appButton>
     {{text}}
 </div>
