--- a/src/app/pages/auth/auth/login/login.component.html
+++ b/src/app/pages/auth/auth/login/login.component.html
@@ -1,52 +1,33 @@
-<div class="text-center text-primary mb-4">
-  <div class="h2 fw-normal mb-0">{{ 'WELCOME_TO' | translate }}</div>
-  <div class="h1 fw-bold text-uppercase">{{ appName }}</div>
-  <div class="fw-normal text-black">{{ 'PROJECT_DESC' | translate }}</div>
-</div>
+<div class="d-flex flex-column justify-content-center h-100">
+  <div class="fs-2 fw-500 mx-auto mb-5" [ngStyle]="{'margin-top.rem' : -10}">Gain Access</div>
+  <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit()">
+    <div class="mx-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 25, 'height.rem' : 3}">
+      <input type="email" formControlName="email" class="form-control rounded-pill" placeholder="Email Address">
+    </div>
+    <div class="mx-auto mb-4 input-group position-relative" [ngStyle]="{'width.rem' : 25, 'height.rem' : 3}">
+      <input type="password" formControlName="password" class="form-control rounded-pill" placeholder="Password">
+      <img class="addon-img" src="assets/img/project/password_addon.png" height="18" />
+    </div>
+    <div class="mx-auto text-start mb-4" [ngStyle]="{'width.rem' : 25}">
+      <a class="ps-3" routerLink="/auth/forgot-password" [ngStyle]="{'color' : '#ff7600', 'text-decoration' : 'none'}">Forgot
+        Password? </a>
+    </div>
+    <div class="mx-auto mb-4" [ngStyle]="{'width.rem' : 10}">
+      <app-custom-button [text]="'login'">
+      </app-custom-button>
+    </div>
+    <div class="mx-auto mb-4">
+      <label class="cursor-pointer">
+        <img src="assets/img/project/google_icon.png" height="48" class="me-2" />
+      </label>
+      <label class="cursor-pointer">
+        <img src="assets/img/project/fb_icon.png" height="48" />
+      </label>
+    </div>
+    <div class="mx-auto">
+      <label >Do you have an account? <a [routerLink]="'/auth/signup'" [ngStyle]="{'color' : '#ff7600', 'text-decoration' : 'none'}">Sign up here</a></label>
+    </div>
+  </form>
 
-<div class="d-flex justify-content-center">
-  <div class="wrapper">
 
-    <!-- NOTE Login form -->
-    <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit()">
-
-      <!-- NOTE Email -->
-      <div class="mb-3">
-        <label for="email" class="form-label text-start w-100">{{ 'EMAIL' | translate }}</label>
-        <input type="email" class="form-control" id="email"
-          formControlName="email"
-          [ngClass]="{ 'is-invalid' : formGroup.controls.email.errors && formGroup.controls.email.touched }">
-        <!-- NOTE Errors -->
-        <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('required')">
-          {{ 'FIELD_REQUIRED' | translate }}
-        </div>
-        <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('email')">
-          {{ 'FIELD_EMAIL' | translate }}
-        </div>
-      </div>
-
-      <!-- NOTE Password -->
-      <div class="mb-3">
-        <label for="password" class="form-label text-start w-100">{{ 'PASSWORD' | translate }}</label>
-        <input type="password" class="form-control" id="password"
-          formControlName="password"
-          [ngClass]="{ 'is-invalid' : formGroup.controls.password.errors && formGroup.controls.password.touched }">
-        <!-- NOTE Errors -->
-        <div class="invalid-feedback" *ngIf="formGroup.controls.password.hasError('required')">
-          {{ 'FIELD_REQUIRED' | translate }}
-        </div>
-      </div>
-
-      <div class="text-end mb-3">
-        <a routerLink="/auth/forgot-password" class="">{{ 'FORGOT_YOUR_PWD' | translate }}</a>
-      </div>
-
-      <div class="text-center">
-        <button type="submit" class="btn btn-primary mb-3 px-5" [disabled]="!formGroup.valid">
-          <span class="px-4 d-block">{{ 'SIGN_IN' | translate }}</span>
-        </button>
-      </div>
-
-    </form>
-  </div>
 </div>
