--- a/src/app/pages/auth/auth/signup/signup.component.html
+++ b/src/app/pages/auth/auth/signup/signup.component.html
@@ -1,14 +1,14 @@
 <div class="d-flex flex-column justify-content-center h-100">
-    <div class="fs-2 fw-500 mx-auto mb-5">Sign Up</div>
-    <div class="mx-auto mb-3" [ngStyle]="{'width.rem' : 18}">
+    <div class="fs-2 fw-500 mx-auto mb-5" [ngStyle]="{'margin-top.rem' : -10}">Sign Up</div>
+    <div class="mx-auto mb-3" [ngStyle]="{'width.rem' : 25}">
         <app-custom-button [text]="'sign up as a user'"></app-custom-button>
     </div>
-    <div class="mx-auto" [ngStyle]="{'width.rem' : 18}">
+    <div class="mx-auto mb-4" [ngStyle]="{'width.rem' : 25}">
         <app-custom-button [text]="'sign up as a merchant'" [isTextDark]="false" [isBackgroundTransparent]="true">
         </app-custom-button>
     </div>
-    <div class="mt-3">
-        <label>Already have an account? <a class="text-warning">Login here</a></label>
+    <div>
+        <label >Already have an account? <a [routerLink]="'/auth/login'" [ngStyle]="{'color' : '#ff7600', 'text-decoration' : 'none'}">Login here</a></label>
     </div>
 
 </div>
