--- a/src/app/pages/market-place/collections/collections.component.html
+++ b/src/app/pages/market-place/collections/collections.component.html
@@ -1,5 +1,4 @@
-<app-toolbar-action [isFilterShow]="false"></app-toolbar-action>
-<div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 row-cols-xxl-4 row-cols-sm-2 g-3">
+<div class="row row-cols-1  g-3" [ngClass]="{'row-cols-md-3 row-cols-lg-3 row-cols-xl-3 row-cols-xxl-3 row-cols-sm-2' : isShowFilterPanel, 'row-cols-md-3 row-cols-lg-4 row-cols-xl-4 row-cols-xxl-4 row-cols-sm-2' : !isShowFilterPanel}">
     <div class="col px-2">
         <app-collection-item></app-collection-item>
     </div>
@@ -83,6 +82,7 @@
     </div>
 
 </div>
+
 
 <app-pagination [count]="itemsCount" [page]="itemsPage" [perPage]="itemsPerPage" (changePage)="onChangePage($event)">
 </app-pagination>
