--- a/src/app/pages/merchant/merchant.component.html
+++ b/src/app/pages/merchant/merchant.component.html
@@ -1,5 +1,5 @@
 <app-page-layout [headerTheme]="'light'">
-    <div class="bg-white text-dark pt-5 container-fluid px-5">
+    <div class="bg-white text-dark pt-5 container-fluid px-5 merchant-wrapper">
         <div class="row">
             <div class="col-md-5 col-lg-4 col-xl-3">
                 <div class="collection-summary-title">
@@ -22,43 +22,14 @@
             </div>
             <div class="col-md-7 col-lg-8 col-xl-9">
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2">
-                        <div class="collection-tab d-flex align-items-center">
-                            <div class="collection-tab-number active">1</div>
-                            <div class="collection-tab-title">Information</div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2">
-                        <div class="collection-tab d-flex align-items-center">
-                            <div class="collection-tab-number">2</div>
-                            <div class="collection-tab-title">Dynamics</div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2">
-                        <div class="collection-tab d-flex align-items-center">
-                            <div class="collection-tab-number">3</div>
-                            <div class="collection-tab-title">Rewards</div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2">
-                        <div class="collection-tab d-flex align-items-center">
-                            <div class="collection-tab-number">4</div>
-                            <div class="collection-tab-title">Artwork</div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2">
-                        <div class="collection-tab d-flex align-items-center">
-                            <div class="collection-tab-number">5</div>
-                            <div class="collection-tab-title">Price</div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2">
-                        <div class="collection-tab d-flex align-items-center">
-                            <div class="collection-tab-number">6</div>
-                            <div class="collection-tab-title">Summary</div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2" *ngFor="let perTab of tabData; let i = index;">
+                        <div class="collection-tab d-flex align-items-center" (click)="onHanldeTransitionTab(i)">
+                            <div class="collection-tab-number" [ngClass]="{'active' : i == currentIndex}">{{perTab.index}}</div>
+                            <div class="collection-tab-title">{{perTab.title}}</div>
                         </div>
                     </div>
                 </div>
+                <ng-template merchant-wizard-host></ng-template>
             </div>
         </div>
     </div>
