--- a/src/app/pages/merchant/merchant.component.scss
+++ b/src/app/pages/merchant/merchant.component.scss
@@ -1,52 +1,64 @@
+.merchant-wrapper {
+    position  : relative;
+    min-height: calc(100vh - 168px);
+    // height    : calc(100vh - 168px);
+}
+
 .collection-summary-title {
-    background: #FF7200;
-    padding: 11px 0px;
-    text-align: center;
-    color: white;
+    background   : #FF7200;
+    padding      : 11px 0px;
+    text-align   : center;
+    color        : white;
     border-radius: 35px 35px 0px 0px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size    : 18px;
+    font-weight  : 500;
 }
 
 .collection-summary-content {
     color: #4a4a4a;
+
     label {
-        margin-left: 18px;
+        margin-left  : 18px;
         margin-bottom: 5px;
-        font-weight: 700;
-        font-size: 14px;
+        font-weight  : 700;
+        font-size    : 14px;
     }
+
     input {
-        width: 100%;
-        padding: 13px 18px;
+        width        : 100%;
+        padding      : 13px 18px;
         border-radius: 27px;
-        border: white;
-        box-shadow: 2px 3px 8px #ababab;
-        color: #4a4a4a;
-        font-size: 15px;
+        border       : white;
+        box-shadow   : 2px 3px 8px #ababab;
+        color        : #4a4a4a;
+        font-size    : 15px;
+
         &:focus-visible {
             outline: none;
         }
     }
 }
 
-.collection-tab{
+.collection-tab {
     border-radius: 50px;
-    box-shadow: 2px 3px 8px #ababab;
+    box-shadow   : 2px 3px 8px #ababab;
     margin-bottom: 10px;
-    margin-right: 0px;
-    cursor: pointer;
-    &-number{
-        padding: 14px 8px 14px 20px;
-        background: #a5a5a5;
+    margin-right : 0px;
+    cursor       : pointer;
+
+    &-number {
+        padding      : 14px 8px 14px 20px;
+        background   : #a5a5a5;
         border-radius: 50px 0px 0px 50px;
-        color: white;
+        color        : white;
     }
+
     &-number.active {
         background: #FF7200;
     }
-    &-title{
-        padding: 0px 0px 0px 7px;
+
+    &-title {
+        padding    : 0px 0px 0px 7px;
         font-weight: 700;
     }
 }
