add merchant sign up part

--- a/src/app/pages/auth/auth/login/login.component.html
+++ b/src/app/pages/auth/auth/login/login.component.html
@@ -25,7 +25,7 @@
       </label>
     </div>
     <div class="mx-auto">
-      <label >Do you have an account? <a [routerLink]="'/auth/signup'" [ngStyle]="{'color' : '#ff7600', 'text-decoration' : 'none'}">Sign up here</a></label>
+      <label >Do you have an account? <a [routerLink]="'/auth/user-signup'" [ngStyle]="{'color' : '#ff7600', 'text-decoration' : 'none'}">Sign up here</a></label>
     </div>
   </form>
 
