--- a/src/app/pages/auth/auth/validate-account/validate-account.component.html
+++ b/src/app/pages/auth/auth/validate-account/validate-account.component.html
@@ -1,31 +1,16 @@
-<div class="text-center text-primary mb-4">
-  <div class="h2 fw-normal mb-0">{{ 'VALIDATE_ACCOUNT' | translate }}</div>
-</div>
-
-<div class="d-flex justify-content-center">
-  <div class="wrapper">
-
-    <!-- NOTE Login form -->
-    <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit()">
-
-      <!-- NOTE Password -->
-      <div class="mb-3">
-        <label for="password" class="form-label text-start w-100">{{ 'PASSWORD' | translate }}</label>
-        <input type="password" class="form-control" id="password"
-          formControlName="password"
-          [ngClass]="{ 'is-invalid' : formGroup.controls.password.errors && formGroup.controls.password.touched }">
-        <!-- NOTE Errors -->
-        <div class="invalid-feedback" *ngIf="formGroup.controls.password.hasError('required')">
-          {{ 'FIELD_REQUIRED' | translate }}
-        </div>
-      </div>
-
-      <div class="text-center">
-        <button type="submit" class="btn btn-primary px-5" [disabled]="!formGroup.valid">
-          {{ 'VALIDATE' | translate }}
-        </button>
-      </div>
-
-    </form>
+<div class="d-flex flex-column justify-content-center h-100">
+  <div class="mx-auto mb-5 d-grid" [ngStyle]="{'margin-top.rem' : -10}">
+    <label class="fs-2 fw-500 ">Verify Your Account</label>
+    <label>We sent you an OTP to your email. <span class="ms-5"
+        [ngStyle]="{'color' : '#ff7600'}">hello@hotmail.com</span></label>
+  </div>
+  <ng-otp-input class="mb-2" (onInputChange)="onOtpChange($event)" [config]="{length:4}"></ng-otp-input>
+  <div class="mx-auto">
+    <label>Don't Receive OTP? <a [ngStyle]="{'color' : '#000', 'text-decoration' : 'underline'}">Send Again
+        Here</a></label>
+  </div>
+  <div class="mx-auto mb-4" [ngStyle]="{'width.rem' : 10, 'margin-top.rem': 3}">
+    <app-custom-button [text]="'Next'" (onClickEvent)="onClickNext($event)">
+    </app-custom-button>
   </div>
 </div>
