--- a/src/app/shared/components/market-place/toolbar-action/toolbar-action.component.html
+++ b/src/app/shared/components/market-place/toolbar-action/toolbar-action.component.html
@@ -1,5 +1,5 @@
 <div class="toolbar-action-content d-flex flex-row flex-wrap justify-content-between align-items-start py-4">
-    <div class="left-toolbar-content d-flex">
+    <div class="left-toolbar-content d-flex mb-3">
         <label *ngIf="isFilterShow" class="me-2" [ngStyle]="{'width.rem' : 6}">
             <app-custom-button [text]="'Filter'" [isBackgroundTransparent]="true" [isTextDark]="true" [isTextStroke]="false"
                 [size]="'sm'" (onClickEvent)="onHandleFilterClick($event)"></app-custom-button>
@@ -16,8 +16,8 @@
                 [isTextStroke]="false" [isTextDark]="true"></app-custom-button>
         </label>
     </div>
-    <div class="right-toolbar-content d-grid" *ngIf="isSearchPanelShow">
-        <div class="input-group mb-2 position-relative" [ngStyle]="{'width.rem' : 18}">
+    <div class="right-toolbar-content d-grid mb-3" *ngIf="isSearchPanelShow">
+        <div class="input-group mb-2 position-relative" [ngStyle]="{'width.rem' : 15}">
             <input type="text" id="market_search_input" class="form-control rounded-pill" placeholder="Search"
                 aria-label="Search" aria-describedby="market_search">
             <img class="market-search-icon" src="assets/img/project/search_icon.svg" height="18" />
