--- a/src/app/pages/dashboard/manage-merchant/merchant-view/merchant-view.component.html
+++ b/src/app/pages/dashboard/manage-merchant/merchant-view/merchant-view.component.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
 
-                <div class="card border-0 shadow rounded-2 mb-3">
+                <div class="card border-0 shadow rounded-2 mb-3" style="padding-bottom: '45px'">
                     <div class="card-body row px-4">
                         <div class="mb-3">
                             <label for="" class="form-label text-secondary">User Name</label>
