--- a/src/app/pages/dashboard/manage-redeem-now/manage-redeem-now.component.scss
+++ b/src/app/pages/dashboard/manage-redeem-now/manage-redeem-now.component.scss
@@ -55,10 +55,11 @@
     border-radius: 50%;
     width: 32px;
     height: 32px;
-    background-color: greenyellow;
+    background-color: #4EFF77;
 }
 
 .divider {
     background-color: #979595eb;
-    height: 2px;
+    height: 1px;
+    margin: 7px 0px;
 }
