--- a/src/app/pages/market-place/brand/brand.component.html
+++ b/src/app/pages/market-place/brand/brand.component.html
@@ -1,4 +1,4 @@
-<div class="title fs-1 mb-3">Brand</div>
+<div class="title fs-1 mb-3 fw-bold">Brand</div>
 <div class="brand-accordion-wrapper">
     <ngb-accordion [closeOthers]="true" activeIds="static-1">
         <ngb-panel id="static-1" title="Brand Name">
