--- a/src/app/pages/merchant/artwork/home/home.component.scss
+++ b/src/app/pages/merchant/artwork/home/home.component.scss
@@ -6,7 +6,7 @@
     background-color: #FF7200;
 }
 .alert-odd {
-    background-color: #F2F2F2 !important;
+    background-color: #e7e7e7 !important;
 }
 .main-color {
     color: var(--main-color);
