--- a/src/app/pages/merchant/dynamics/dynamics.component.scss
+++ b/src/app/pages/merchant/dynamics/dynamics.component.scss
@@ -24,7 +24,7 @@
     height: 400px;
 }
 .alert {
-    height: 120px!important;
+    // height: 120px!important;
     // overflow-y: scroll;
     overflow: hidden;
 }
