--- a/src/app/shared/components/market-place/filter-panel/filter-panel.component.html
+++ b/src/app/shared/components/market-place/filter-panel/filter-panel.component.html
@@ -6,19 +6,19 @@
     <div class="card-body d-flex flex-column justify-content-start px-5">
         <label>Group By:</label>
         <div class="filter-item" (click)="onHandleGroupBy('brand')">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 Brand
             </label>
         </div>
         <div class="filter-item" (click)="onHandleGroupBy('collection')">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 Collection
             </label>
         </div>
         <div class="filter-item" (click)="onHandleGroupBy('typeofrewards')">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 Type Of Rewards
             </label>
@@ -26,25 +26,25 @@
 
         <label class="mt-3">Filter:</label>
         <div class="filter-item">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 PRice
             </label>
         </div>
         <div class="filter-item">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 Date (from) - Date(to)
             </label>
         </div>
         <div class="filter-item">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 User Only
             </label>
         </div>
         <div class="filter-item">
-            <input class="form-check-input" disabled type="checkbox" value="">
+            <input class="form-check-input" type="checkbox" value="">
             <label class="ms-2">
                 Merchant Only
             </label>
