--- a/src/app/shared/components/market-place/toolbar-action/toolbar-action.component.html
+++ b/src/app/shared/components/market-place/toolbar-action/toolbar-action.component.html
@@ -23,8 +23,8 @@
             <img class="market-search-icon" src="assets/img/project/search_icon.svg" height="18" />
         </div>
         <div class="d-flex align-items-center">
-            <div [ngStyle]="{'width.%' : 30}">Sort By</div>
-            <select class="form-select rounded-pill" id="market_sortby" aria-label="Default select example">
+            <div [ngStyle]="{'width.%' : 30, 'font-size': '13px'}"><strong>Sort By</strong></div>
+            <select class="form-select rounded-pill custom-caret-select" id="market_sortby" aria-label="Default select example">
                 <option selected>Name</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
