--- a/src/app/pages/market-place/item-detail/item-detail.component.html
+++ b/src/app/pages/market-place/item-detail/item-detail.component.html
@@ -39,11 +39,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-2 row-cols-xxl-2 row-cols-sm-1 g-3 flex-fill">
-                        <div class="mt-auto">
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-2 row-cols-xxl-2 row-cols-sm-1 g-3 flex-fill mt-3">
+                        <div>
                             <app-custom-button [isTextStroke]="false" [text]="'buy now'"></app-custom-button>
                         </div>
-                        <div class="mt-auto">
+                        <div>
                             <app-custom-button [isTextStroke]="false" [isBackgroundTransparent]="true" [isTextDark]="true" [text]="'bid now'"></app-custom-button>
                         </div>
                     </div>
