update UI according to the feedback.

--- a/src/app/pages/dashboard/home/home.component.html
+++ b/src/app/pages/dashboard/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="row p-0 m-0 pe-5">
         <div class="col-md-8 col-sm-12 mb-3">
             <div class="d-flex justify-content-between align-items-center" [ngStyle]="{'height.px' : 60}">
-                <label class="fs-3 me-auto">Pending Approval</label>
+                <label class="fs-3 me-auto" [ngStyle]="{'font-family': 'app_font'}">Pending Approval</label>
                 <div class="d-flex justify-content-center">
                     <app-arrow-button class="me-2" [isLeft]="true"></app-arrow-button>
                     <app-arrow-button class="ms-2" [isRight]="true"></app-arrow-button>
@@ -10,44 +10,44 @@
             </div>
             <div class="row row-cols-1 row-cols-md-3 mb-3 g-5">
                 <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                    <div class="card top-pending-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                        <div class="p-2 collection-img-wrapper mx-auto mb-auto">
                             <img src="assets/img/project/dashboard/home/reward_1.png" class="collection-img" />
                         </div>
                         <div
                             class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fw-bold fs-4 mb-0">Merchant 1</label>
-                            <label class="text-muted" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
+                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Merchant 1</label>
+                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                    <div class="card top-pending-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                        <div class="p-2 collection-img-wrapper mx-auto mb-auto">
                             <img src="assets/img/project/dashboard/home/reward_2.png" class="collection-img" />
                         </div>
                         <div
                             class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fw-bold fs-4 mb-0">Merchant 2</label>
-                            <label class="text-muted" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
+                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Merchant 2</label>
+                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                    <div class="card top-pending-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                        <div class="p-2 collection-img-wrapper mx-auto mb-auto">
                             <img src="assets/img/project/dashboard/home/reward_3.png" class="collection-img" />
                         </div>
                         <div
                             class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fw-bold fs-4 mb-0">Merchant 3</label>
-                            <label class="text-muted text-start" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
+                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Merchant 3</label>
+                            <label class="text-muted text-start my-3" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <label class="fs-3 me-auto mb-3">Transaction Analysis</label>
+                <label class="fs-3 me-auto mb-3" [ngStyle]="{'font-family': 'app_font'}">Transaction Analysis</label>
                 <div class="col-md-12 col-sm-12 mb-3">
                     <div class="card top-card border-0 rounded-4">
                         <div class="card-body">
@@ -62,21 +62,21 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-12 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60}">Key Stats</label>
+            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">Key Stats</label>
             <div class="row row-cols-2 g-4 mb-3">
                 <div class="col">
-                    <div class="card border-0 rounded-4">
-                        <div class="card-body">
-                            <p>Active Users %</p>
-                            <p class="fs-2">45%</p>
+                    <div class="card border-0 rounded-5 ">
+                        <div class="card-body py-3">
+                            <p class="mb-0" [ngStyle]="{'color' : '#233B58', 'font-family' : 'Robo_Medium'}">Active Users %</p>
+                            <p class="fs-2 mb-0" [ngStyle]="{'font-family': 'app_font'}">45%</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border-0 rounded-4">
-                        <div class="card-body">
-                            <p>Active Users %</p>
-                            <p class="fs-2">45%</p>
+                    <div class="card border-0 rounded-5">
+                        <div class="card-body py-3">
+                            <p class="mb-0" [ngStyle]="{'color' : '#233B58', 'font-family' : 'Robo_Medium'}">Active Users %</p>
+                            <p class="fs-2 mb-0" [ngStyle]="{'font-family': 'app_font'}">45%</p>
                         </div>
                     </div>
                 </div>
