--- a/src/app/shared/components/dashboard/arrow-button/arrow-button.component.scss
+++ b/src/app/shared/components/dashboard/arrow-button/arrow-button.component.scss
@@ -6,7 +6,7 @@
     border-radius: 50%;
     box-shadow: -2px 1px 0px #282828, white 0px 1px 0px inset;
     cursor: pointer;
-    background-color: #EE7930;
+    background-color: #FF7200;
     background-image: url('/assets/img/project/dashboard/arrow_left.png');
     background-repeat: no-repeat;
     background-position: center;
@@ -20,7 +20,7 @@
     border-radius: 50%;
     box-shadow: -2px 1px 0px #282828, white 0px 1px 0px inset;
     cursor: pointer;
-    background-color: #EE7930;
+    background-color: #FF7200;
     background-image: url('/assets/img/project/dashboard/arrow_right.png');
     background-repeat: no-repeat;
     background-position: center;
