--- a/src/app/pages/dashboard/manage-redeem-reward/manage-redeem-reward.component.html
+++ b/src/app/pages/dashboard/manage-redeem-reward/manage-redeem-reward.component.html
@@ -1,5 +1,5 @@
 <div class="manage-reward-wrapper container-fluid d-flex flex-column">
-    <label class="fs-3 ps-3 mb-3">Redeem Rewards</label>
+    <label class="fs-3 ps-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Redeem Rewards</label>
     <div class="row px-3 pe-5 mb-auto row-cols-1 row-cols-md-4 row-cols-lg-5 row-cols-sm-2 row-cols-xs-1">
         <div class="col mb-3">
             <div class="card border-0 rounded-4 pt-3 d-flex flex-column">
@@ -7,8 +7,8 @@
                     <img src="assets/img/project/dashboard/home/reward_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 1</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 1</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -21,8 +21,8 @@
                     <img src="assets/img/project/dashboard/home/reward_2.png" />
                 </div>
                 <div class="info px-3 mb-auto">
-                    <p class="fs-5 mb-0 fw-500">Reward 2</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 2</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -35,8 +35,8 @@
                     <img src="assets/img/project/dashboard/home/collection_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 3</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 3</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -49,8 +49,8 @@
                     <img src="assets/img/project/dashboard/home/reward_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 1</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 1</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -63,8 +63,8 @@
                     <img src="assets/img/project/dashboard/home/reward_2.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 2</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 2</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -77,8 +77,8 @@
                     <img src="assets/img/project/dashboard/home/collection_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 3</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 3</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -91,8 +91,8 @@
                     <img src="assets/img/project/dashboard/home/reward_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 1</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 1</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -105,8 +105,8 @@
                     <img src="assets/img/project/dashboard/home/reward_2.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 2</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 2</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -119,8 +119,8 @@
                     <img src="assets/img/project/dashboard/home/collection_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 3</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 3</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
@@ -133,8 +133,8 @@
                     <img src="assets/img/project/dashboard/home/reward_1.png" />
                 </div>
                 <div class="info px-3">
-                    <p class="fs-5 mb-0 fw-500">Reward 1</p>
-                    <label [ngStyle]="{'font-size.px' : 12}" class="text-muted">Date Won</label>
+                    <p class="mb-0 fw-500">Reward 1</p>
+                    <label class="text-muted">Date Won</label>
                 </div>
                 <div class="redeem-btn btn-main-bg rounded-4 text-white text-center py-2 cursor-pointer" (click)="onRedeemClick()">
                     Redeem Now
