--- a/src/app/pages/dashboard/user-portal/user-portal.component.html
+++ b/src/app/pages/dashboard/user-portal/user-portal.component.html
@@ -2,7 +2,7 @@
     <div class="row p-0 m-0 pe-5">
         <div class="col-md-8 col-sm-12 mb-3">
             <div class="d-flex justify-content-between align-items-center" [ngStyle]="{'height.px' : 60}">
-                <label class="fs-3 me-auto">Recent Rewards</label>
+                <label class="fs-3 me-auto" [ngStyle]="{'font-family': 'app_font'}">Recent Rewards</label>
                 <div class="d-flex justify-content-center">
                     <app-arrow-button class="me-2" [isLeft]="true"></app-arrow-button>
                     <app-arrow-button class="ms-2" [isRight]="true"></app-arrow-button>
@@ -10,35 +10,38 @@
             </div>
             <div class="row row-cols-1 row-cols-md-3 mb-3 g-5">
                 <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                    <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                        <div class="p-2 collection-image-wrapper">
                             <img src="assets/img/project/dashboard/home/reward_1.png" class="collection-img" />
                         </div>
                         <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0">Reward 1</label>
+                            class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
+                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 1</label>
+                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                    <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                        <div class="p-2 collection-image-wrapper">
                             <img src="assets/img/project/dashboard/home/reward_2.png" class="collection-img" />
                         </div>
                         <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0">Reward 2</label>
+                            class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
+                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 2</label>
+                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                    <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                        <div class="p-2 collection-image-wrapper">
                             <img src="assets/img/project/dashboard/home/reward_3.png" class="collection-img" />
                         </div>
                         <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0">Reward 3</label>
+                            class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
+                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 3</label>
+                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
                         </div>
                     </div>
                 </div>
@@ -80,21 +83,21 @@
     </div>
     <div class="row p-0 m-0 pe-5">
         <div class="col-md-8 col-sm-12 mb-3">
-            <label class="fs-3 mb-3">Money Spent</label>
-            <div class="row">
-                <div class="col-md-6 col-sm-12 mb-3">
-                    <div class="card money-spent-card border-0 rounded-5 d-flex flex-column justify-content-center">
+            <label class="fs-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Money Spent</label>
+            <div class="row row-cols-2 row-cols-md-1 row-cols-lg-2">
+                <div class="col mb-3">
+                    <div class="card money-spent-card border-0 rounded-5 d-flex flex-column justify-content-center h-100">
                         <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0 text-white">Most Valuable Reward</label>
+                            class="collection-title d-flex flex-column justify-content-center align-items-center">
+                            <label class="text-white py-3" [ngStyle]="{'font-family': 'app_font', 'font-size': '14px'}">Most Valuable Reward</label>
                         </div>
-                        <div class="px-3 pb-3">
+                        <div class="p-3 pt-0 collection-image-wrapper mx-auto">
                             <img src="assets/img/project/dashboard/money_spent.png" class="collection-img" />
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 mb-3">
-                    <div class="card top-card border-0 rounded-4">
+                <div class="col mb-3">
+                    <div class="card top-card border-0 rounded-4 h-100">
                         <div class="card-body">
                             <label>Financial transaction/month</label>
                             <div class="mb-3">
@@ -114,7 +117,7 @@
             <label class="fs-3" [ngStyle]="{'height.px' : 60}">List Rewards <span class="text-muted d-block"
                     [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
             <div class="card top-card border-0 rounded-4">
-                <div class="card-body d-flex flex-column justify-content-center">
+                <div class="card-body d-flex flex-column justify-content-center ">
                     <div
                         class="d-flex flex-row justify-content-start align-items-center rounded-pill shadow bg-white py-2 px-3 mb-3">
                         <div class="list-item-image">
