--- a/src/app/shared/components/layouts/sidebar-layout/sidebar-layout.component.scss
+++ b/src/app/shared/components/layouts/sidebar-layout/sidebar-layout.component.scss
@@ -1,10 +1,21 @@
+.navbar-toggler-icon {
+    
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    background-image: var(--bs-navbar-toggler-icon-bg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+}
 .sidebar-item {
     padding: 5px;
     cursor: pointer;
 }
 .sidebar-item-image {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 2rem;
+    height: 2rem;
     object-fit: contain;
     padding: 3px;
 }
@@ -16,4 +27,26 @@
 }
 .active-color {
     color: #FF7200;
+}
+
+.toggle-menu-btn {
+    margin-top: 1rem;
+    &:hover {
+        color: black;
+    }
+    &:focus-within {
+        border: none;
+    }
+    .fa {
+        font-size: 25px;
+    }
+}
+.sidebar-content {
+    margin-top: 1rem;
+}
+.display-none {
+    display: none;
+}
+.display-table {
+    display: block;
 }
